Fix translate not showing all languages...
Certain languages where in the iframe but not showing.

--- a/assets/scss/0-tools/_google-translate-overrides.scss
+++ b/assets/scss/0-tools/_google-translate-overrides.scss
@@ -41,6 +41,7 @@
 }
 .goog-te-menu2 {
   max-width: 100%;
+  width: 100%;
 }
 .goog-te-gadget-simple:hover .goog-te-menu-value {
   color: $white !important;
